--- a/SampleTestConsoleApp1/SampleTestConsoleApp1.csproj
+++ b/SampleTestConsoleApp1/SampleTestConsoleApp1.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SampleConsoleApp1\SampleConsoleApp1.csproj" />
+  </ItemGroup>
 </Project>
